--- a/src/App.css
+++ b/src/App.css
@@ -1,158 +1,182 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .searchField {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-bottom: 30px;
-  background-color: #e3eeff;
-  padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    background-color: #e3eeff;
+    padding: 10px;
 }
 
 .filterField {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  background-color: #e3eeff;
-  padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background-color: #e3eeff;
+    padding: 10px;
 }
 
-.emptyTable{
+.emptyTable {
 
 }
 
 .filterCells {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .filterDropdown {
-  margin-right: 10px;
-  width: 250px;
-  align-items: center;
+    margin-right: 10px;
+    width: 250px;
+    align-items: center;
 }
 
 label.MuiFormControlLabel-root {
-  cursor: pointer;
-  display: inline-flex;
-  align-items: center;
-  margin-left: 0px;
-  margin-right: 0px;
-  vertical-align: middle;
-  -webkit-tap-highlight-color: transparent;
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    margin-left: 0px;
+    margin-right: 0px;
+    vertical-align: middle;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .MuiFormGroup-root.radioGroup {
-  margin-top: 10px;
-  display: block;
-  flex-wrap: wrap;
-  flex-direction: column;
+    margin-top: 10px;
+    display: block;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 .referenceDropdown {
-  margin-top: 30px;
-  width: 300px;
+    margin-top: 30px;
+    width: 300px;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
+
 /*.MuiDialog-scrollPaper{*/
 /*  justify-content: flex-start !important;*/
 /*  align-items: flex-start !important;*/
 /*}*/
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-.tableCell{
-  box-shadow: 0 2px 10px rgb(0 0 0 / 10%);
-  border-radius: 5px;
-}
-.body{
-  background: #f9f9f9;
-  font-family: "Roboto", sans-serif;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
-.tableRow{
-  border-spacing: 0 100000px !important;
-  border-collapse: separate !important;
+.tableCell {
+    box-shadow: 0 2px 10px rgb(0 0 0 / 20%);
+    /*border-bottom: 1rem solid #f9f9f9;*/
 }
 
-/*.dropbtn {*/
-/*  background-color: #3498DB;*/
-/*  color: white;*/
-/*  padding: 16px;*/
-/*  font-size: 16px;*/
-/*  border: none;*/
-/*  cursor: pointer;*/
+.all-users-view__table {
+    border-spacing: 0.5rem 0.7rem;
+    border-collapse: separate;
+    width: 100%;
+    background: #f9f9f9;
+}
+.user-create__form-control{
+    align-items: center;
+}
+.img{
+    height: 55px!important;
+    width: 55px!important;
+}
+
+.all-users-view {
+    width: 85%;
+    /*margin-left: 10%;*/
+    /*margin-right: 10% ;*/
+    margin: 10% auto 0;
+}
+
+.bg-success {
+    background-color: #28a745!important;
+}
+.bg-danger {
+    background-color: #dc3545!important;
+}
+.btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+    color: #fff;
+    display: inline-block;
+    /*font-weight: 400;*/
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    /*border: 1px solid transparent;*/
+}
+
+.active-circle {
+    height: 10px;
+    width: 10px;
+    border-radius: 10px;
+    margin-right: 5px;
+    display: inline-block;
+}
+
+.user-create__text{
+    /*margin-left: 7%;*/
+    /*margin-right: 7%;*/
+}
+.MuiFormControl-fullWidth{
+    width: 85%;
+    margin: auto;
+}
+
+.all-users-view__header {
+    background-color: #f9f9f9;
+    font-size: 0.75rem;
+    font-weight: bold;
+}
+
+/*table thead.all-users-view__header {*/
+/*  border-color: transparent;*/
 /*}*/
 
-/*!* Dropdown button on hover & focus *!*/
-/*.dropbtn:hover, .dropbtn:focus {*/
-/*  background-color: #2980B9;*/
-/*}*/
-
-/*!* The container <div> - needed to position the dropdown content *!*/
-/*.dropdown {*/
-/*  !*display: block;*!*/
-/*  position: relative;*/
-/*  display: inline-block;*/
-/*}*/
-
-/*!* Dropdown Content (Hidden by Default) *!*/
-/*.dropdown-content {*/
-/*  display: none;*/
-/*  position: absolute;*/
-/*  background-color: #f1f1f1;*/
-/*  min-width: 160px;*/
-/*  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
-/*  z-index: 1;*/
-/*}*/
-
-/*!* Links inside the dropdown *!*/
-/*.dropdown-content a {*/
-/*  color: black;*/
-/*  padding: 12px 16px;*/
-/*  text-decoration: none;*/
-/*  display: block;*/
-/*}*/
-
-/*!* Change color of dropdown links on hover *!*/
-/*.dropdown-content a:hover {background-color: #ddd;}*/
-
-/*!* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) *!*/
-/*.show {display:block;}*/
-
+.body {
+    height: 100vh;
+    background: #f9f9f9;
+    font-size: 0.75rem;
+    font-family: Roboto,sans-serif;
+}
 
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
